# Datos2.Proyecto1.OdisseyRadio

./: .gitignore  CMakeLists.txt  README.md  main.cpp
LinkedList/: LinkedList.cpp  LinkedList.h  Node.cpp  Node.h
Metadata/: LinkedList.h  tracks.cpp  tracks.h
OdisseyGUI/: Doxyfile  DurationSubject.cpp  DurationSubject.h  ListGenerator.h  MP3Player.cpp  MP3Player.h  MemoryUsage.cpp  MemoryUsage.h  OS.cpp  OS.h  information.cpp  information.h  information.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  trackListGenerator.h  tracks.cpp  tracks.h
OdisseyGUI/html/: DurationSubject_8h_source.html  MP3Player_8h_source.html  MemoryUsage_8h_source.html  OS_8h_source.html  annotated.html  classDurationSubject-members.html  classDurationSubject.html  classInformation-members.html  classInformation.html  classInformation__coll__graph.dot  classMP3Player-members.html  classMP3Player.html  classMainWindow-members.html  classMainWindow.html  classMemoryUsage-members.html  classMemoryUsage.html  classMemoryUsage__coll__graph.dot  classOS-members.html  classOS.html  classOS__coll__graph.dot  classes.html  files.html  functions.html  functions_func.html  graph_legend.html  hierarchy.html  index.html  information_8h_source.html  inherit_graph_0.dot  inherit_graph_1.dot  inherit_graph_2.dot  inherit_graph_3.dot  inherit_graph_4.dot  inherits.html  mainwindow_8h_source.html  namespaceUi.html  namespaces.html  trackListGenerator_8h_source.html
OdisseyGUI/latex/: annotated.tex  classOS.tex  (+14 more)
SmallTrackCreator/: creator.cpp
build-OdisseyGUI-Works-Debug/: ui_mainwindow.h
(+28 files in other folders)
